minio-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-nodeport
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    name: local-minio-pod
  type: NodePort
